--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,42 @@ p {
   width: 100%;
   height: var(--wrapperheight);
 }
-
+.common-heading{
+  width: 100%;
+}
+.common-heading h1{
+  font-family: "DM Sans", sans-serif;
+  font-size: 38px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  color: #000;
+}
+.common-heading h4{
+  font-family: "Nunito Sans", sans-serif;
+  font-size: 18px;
+  text-transform: uppercase;
+  color: #2f2483;
+  position: relative;
+  font-weight: 800;
+}
+.common-heading h4::after{
+  position: absolute;
+  content: "";
+  width: 4%;
+  height: 2px;
+  background-color: #8a7bff;
+  right: 40%;
+  bottom: 11px;
+}
+.common-heading h4::before{
+  position: absolute;
+  content: "";
+  width: 4%;
+  height: 2px;
+  background-color: #8a7bff;
+  left: 40%;
+  bottom: 11px;
+}
 .start-header {
   opacity: 1;
   transform: translateY(0);
@@ -1096,11 +1131,58 @@ hr.title-line {
 .home-products{
   width: 100%;
 }
-
-
+.row-bg{
+  background-image: url(https://websmirno.site/viktor/prolaundry/images/box02-img01.webp);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+.home-products-box{
+  background-color: #2f2483f5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10% 0;
+  position: relative;
+  cursor: pointer;
+}
+.home-products-box:nth-child(1){
+  border-right: 1px solid #fff;
+}
+.home-products-box img{
+  width: 30%;
+  filter: drop-shadow(1px 1px 6px #fff);
+  transition: all 0.5s ease;
+}
+.product-content{
+  position: absolute;
+  width: 100%;
+  height: 11%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  bottom: 0;
+  transition: all 0.5s ease;
+}
+.home-products-box:hover .product-content{
+  background-color: #2f2483f5;
+  height: 100%;
+  transition: all 0.5s ease;
+}
+.home-products-box:hover img{
+  transform: scale(1.1);
+  transition: all 0.5s ease;
+}
+.product-content h1{
+  font-family: "DM Sans", sans-serif;
+  color: #fff;
+  font-size: 30px;
+    font-weight: 500;
+}
 /******************************footer css****************************/
 #tt-footer {
-  position: relative
+  position: relative;
+  background-color:#efeef7;
 }
 
 .footer-wrapper01 {
@@ -1150,6 +1232,9 @@ hr.title-line {
   position: relative;
   z-index: 3;
   padding: 15px 0 15px;
+  font-size: 14px;
+    font-weight: 600;
+    font-family: "Nunito Sans", sans-serif;
 }
 
 @media (max-width: 1024.98px) {
@@ -1187,7 +1272,7 @@ hr.title-line {
   font-size: 30px;
 }
 .f-logo img{
-  width: 36%;
+  width: 30%;
 }
 
 
@@ -1236,8 +1321,9 @@ hr.title-line {
 }
 
 .f-text {
-  margin-top: 15px;
+  margin-top: 25px;
   font-family: "Nunito Sans", sans-serif;
+  margin-right: 40px;
 }
 .f-info{
   font-family: "Nunito Sans", sans-serif;
@@ -1267,7 +1353,7 @@ hr.title-line {
   -ms-flex-align: start;
   align-items: flex-start;
   margin-left: -6px;
-  margin-top: 16px
+  margin-top: 25px
 }
 
 .f-social li {
@@ -1379,11 +1465,11 @@ hr.title-line {
 }
 
 .f-link li {
-  margin-left: 17px
+  margin-left: 5px
 }
 
 .f-link li a {
-  color: #7b7b7b;
+  color: #212529;
   position: relative
 }
 
@@ -1397,13 +1483,13 @@ hr.title-line {
   margin: auto;
   left: 0;
   right: 0;
-  background-color: #52b765;
+  background-color: #8a7bff;
   -webkit-transition: width .2s linear;
   transition: width .2s linear
 }
 
 .f-link li a:hover {
-  color: #52b765
+  color: #8a7bff;
 }
 
 .f-link li a:hover:before {
@@ -1521,10 +1607,539 @@ hr.title-line {
   }
 }
 
-.f-col-wrapper {
-  margin-top: -38px
+.bubbleContainer {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  overflow: hidden;
+  z-index: 1;
+  pointer-events: none
 }
 
-.f-col-wrapper [class^=col] {
-  margin-top: 38px
+.bubbleContainer div[class^=bubble-] {
+  height: 1px;
+  width: 1px;
+  position: absolute;
+  background: url(../img/bubbles-01.png) no-repeat center center;
+  background-size: cover;
+  border-radius: 50%;
+  -webkit-transform: translateX(-50%);
+  transform: translateX(-50%);
+  pointer-events: none
+}
+
+@media (max-width: 1024px) {
+  .bubbleContainer>:nth-child(even) {
+      display:none
+  }
+}
+
+.bubble-1 {
+  bottom: -5px;
+  left: 68%;
+  -webkit-animation: bubble-animation 4.5s infinite ease-in -6.57s;
+  animation: bubble-animation 4.5s infinite ease-in -6.57s
+}
+
+.bubble-2 {
+  bottom: -71px;
+  left: 97%;
+  -webkit-animation: bubble-animation 4.5s infinite ease-in -5.07s;
+  animation: bubble-animation 4.5s infinite ease-in -5.07s
+}
+
+.bubble-3 {
+  bottom: -71px;
+  left: 43%;
+  -webkit-animation: bubble-animation 4.5s infinite ease-in -6.73s;
+  animation: bubble-animation 4.5s infinite ease-in -6.73s
+}
+
+.bubble-4 {
+  bottom: -3.8px;
+  left: 82%;
+  -webkit-animation: bubble-animation 4.5s infinite ease-in -4.04s;
+  animation: bubble-animation 4.5s infinite ease-in -4.04s
+}
+
+.bubble-5 {
+  bottom: -73.4px;
+  left: 29%;
+  -webkit-animation: bubble-animation 4.5s infinite ease-in -3.11s;
+  animation: bubble-animation 4.5s infinite ease-in -3.11s
+}
+
+.bubble-6 {
+  bottom: -71px;
+  left: 41%;
+  -webkit-animation: bubble-animation 4.5s infinite ease-in -5.95s;
+  animation: bubble-animation 4.5s infinite ease-in -5.95s
+}
+
+.bubble-7 {
+  bottom: -79.4px;
+  left: 14%;
+  -webkit-animation: bubble-animation 4.5s infinite ease-in -3.68s;
+  animation: bubble-animation 4.5s infinite ease-in -3.68s
+}
+
+.bubble-8 {
+  bottom: -115.4px;
+  left: 90%;
+  -webkit-animation: bubble-animation 4.5s infinite ease-in -3.89s;
+  animation: bubble-animation 4.5s infinite ease-in -3.89s
+}
+
+.bubble-9 {
+  bottom: -44.6px;
+  left: 33%;
+  -webkit-animation: bubble-animation 4.5s infinite ease-in -1.09s;
+  animation: bubble-animation 4.5s infinite ease-in -1.09s
+}
+
+.bubble-10 {
+  bottom: -6.2px;
+  left: 59%;
+  -webkit-animation: bubble-animation 4.5s infinite ease-in -.96s;
+  animation: bubble-animation 4.5s infinite ease-in -.96s
+}
+
+@-webkit-keyframes bubble-animation {
+  0% {
+      -webkit-transform: translate3d(-50%,0,0);
+      transform: translate3d(-50%,0,0);
+      height: 1px;
+      width: 1px
+  }
+
+  100% {
+      -webkit-transform: translate3d(-50%,-280px,0);
+      transform: translate3d(-50%,-280px,0);
+      height: 75px;
+      width: 75px
+  }
+}
+
+@keyframes bubble-animation {
+  0% {
+      -webkit-transform: translate3d(-50%,0,0);
+      transform: translate3d(-50%,0,0);
+      height: 1px;
+      width: 1px
+  }
+
+  100% {
+      -webkit-transform: translate3d(-50%,-280px,0);
+      transform: translate3d(-50%,-280px,0);
+      height: 75px;
+      width: 75px
+  }
+}
+
+/**************************************Home testimonials css******************************************/
+.home-testimonials{
+  width: 100%;
+  background-color: #efeef7;
+}
+.testimonial-box {
+  display: block;
+  position: relative;
+  padding: 50px 20px 0 20px;
+}
+.testimonial-main{
+  margin-top: 90px;
+}
+.testimonial-box p{
+  font-size: 16px;
+  font-family: "Nunito Sans", sans-serif;
+  line-height: 30px;
+  margin-right: 5%;
+}
+.user-img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  position: relative;
+min-width: 100px;
+background-size: 100%;
+}
+.carousel-testimonial .item {
+padding: 30px 10px;
+}
+.quote {
+  position: absolute;
+  top: -15px;
+  color: #8a7bff;
+  font-size: 40px;
+}
+.name {
+  font-size: 18px !important;
+  font-family: "DM Sans", sans-serif !important;
+  font-weight: 700;
+  color: #2d2299;
+  /* text-transform: uppercase; */
+}
+.position {
+color: #adadad;
+font-size: 14px;
+}
+/**************************************easy washing tips css******************************************/
+.step-wrap {
+  position: relative;
+}
+
+.step-wrap .process-line {
+  position: absolute;
+  top: 50%;
+  left: 13%;
+  width: 898px;
+  height: 3px;
+  background: -webkit-radial-gradient(50% 150.26%, 25413393.39% 152.99%, #8a7bff 0%, #ECF1F5 100%);
+  background: radial-gradient(25413393.39% 152.99% at 50% 150.26%, #8a7bff 0%, #ECF1F5 100%);
+  /* Large devices */
+}
+
+@media (max-width: 1199px) {
+  .step-wrap .process-line {
+    display: none;
+  }
+}
+
+.process-card {
+  position: relative;
+  z-index: 2;
+  padding: 30px 0 0 0;
+  text-align: center;
+  cursor: pointer;
+}
+
+.process-card:before {
+  content: "";
+  position: absolute;
+  top: -20%;
+  left: -25%;
+  width: 568px;
+  height: 568px;
+  background: url("../img/process_shape_1.png");
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  -webkit-animation: spin 15s linear infinite;
+          animation: spin 15s linear infinite;
+  /* Small devices */
+  /* Extra small devices */
+}
+
+@media (max-width: 767px) {
+  .process-card:before {
+    left: 0%;
+  }
+}
+
+@media (max-width: 575px) {
+  .process-card:before {
+    left: 0%;
+  }
+}
+
+@media (max-width: 480px) {
+  .process-card:before {
+    left: -30%;
+  }
+}
+
+.process-card .box-content {
+  position: relative;
+  background-color: #fff;
+  width: 340px;
+  height: 340px;
+  border: 8px solid #efeef7;
+  border-radius: 50%;
+  padding: 20px 32px;
+  /* Extra small devices */
+  /* Small devices */
+}
+
+@media (max-width: 575px) {
+  .process-card .box-content {
+    width: 300px;
+    height: 300px;
+    padding: 20px 26px;
+  }
+}
+
+@media (max-width: 767px) {
+  .process-card .box-content {
+    display: block;
+    margin: auto;
+  }
+}
+
+.process-card .box-content:before {
+  content: "";
+  position: absolute;
+  inset: 0;
+}
+
+.process-card .box-top {
+  padding: 90px 0 0 0;
+  /* Extra small devices */
+}
+
+@media (max-width: 575px) {
+  .process-card .box-top {
+    padding: 70px 0 0 0;
+  }
+}
+
+.process-card .box-number {
+  text-transform: uppercase;
+  font-size: 16px;
+  margin-bottom: 8px;
+  margin-top: -0.45em;
+  font-family: "Nunito Sans", sans-serif;
+}
+.process-card .box-text {
+
+  font-family: "Nunito Sans", sans-serif;
+}
+.process-card .box-title {
+  margin-bottom: 12px;
+  font-family: "DM Sans", sans-serif;
+}
+
+@media (max-width: 575px) {
+  .process-card .box-title {
+    font-size: 18px;
+  }
+}
+
+.process-card .box-icon {
+  position: absolute;
+  top: 0;
+  left: calc(50% - 105px);
+  height: 128px;
+  width: 148px;
+  line-height: 128px;
+  border-radius: 20px;
+  z-index: 2;
+  /* Large devices */
+  /* Medium devices */
+}
+
+@media (max-width: 1199px) {
+  .process-card .box-icon {
+    left: calc(50% - 120px);
+  }
+}
+
+@media (max-width: 991px) {
+  .process-card .box-icon {
+    left: calc(50% - 70px);
+  }
+}
+
+.process-card .box-icon:before, .process-card .box-icon:after {
+  content: '';
+  background-color: #efeef7;
+  position: absolute;
+  inset: 0px;
+  border-radius: 20px;
+  z-index: -1;
+}
+
+.process-card .box-icon:before {
+  -webkit-clip-path: path("M44.6853 100.05L5.34957 32.0101C-2.35877 18.6767 7.26309 2 22.6643 2H101.336C116.737 2 126.359 18.6767 118.65 32.0101L79.3147 100.05C71.6141 113.37 52.3859 113.37 44.6853 100.05Z");
+          clip-path: path("M44.6853 100.05L5.34957 32.0101C-2.35877 18.6767 7.26309 2 22.6643 2H101.336C116.737 2 126.359 18.6767 118.65 32.0101L79.3147 100.05C71.6141 113.37 52.3859 113.37 44.6853 100.05Z");
+}
+
+.process-card .box-icon:after {
+  inset: 4px;
+  border-radius: 20px;
+  background-color: #fff;
+  -webkit-clip-path: path("M37.6619 81.8468L5.23242 23.9694C-2.43423 0.6361 6.19022 2 16.5705 1H91.4295C106.81 2 116.434 7.6361 113.768 22.9694L74.3381 90.8467C66.648 114.221 41.352 96.221 36.6619 76.8468Z");
+          clip-path: path("M37.6619 81.8468L5.23242 23.9694C-2.43423 0.6361 6.19022 2 16.5705 1H91.4295C106.81 2 116.434 7.6361 113.768 22.9694L74.3381 90.8467C66.648 114.221 41.352 96.221 36.6619 76.8468Z");
+}
+
+.process-card .box-icon img {
+  margin: -40px 0 0 -20px;
+}
+
+.process-card:hover .box-icon img {
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+}
+.box-icon img {
+  -webkit-transition: 0.4s ease-in-out;
+  transition: 0.4s ease-in-out;
+}
+.process-card.active .box-content {
+  border: 8px solid #8a7bff;
+}
+
+.process-card.active .box-icon:before {
+  background-color: #8a7bff;
+}
+
+.process-card.active:before {
+  opacity: 1;
+  visibility: visible;
+}
+
+/* Large devices */
+@media (max-width: 1199px) {
+  .process-card .box-content {
+    padding: 16px 24px;
+  }
+}
+
+/* Small devices */
+/* Process box ---------------------------------- */
+.process-box {
+  position: relative;
+  z-index: 2;
+  text-align: center;
+}
+
+.process-box .box-number {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: var(--title-color);
+  line-height: 50px;
+  font-size: 20px;
+  color: var(--white-color);
+  font-weight: 600;
+  margin-bottom: 0;
+  z-index: 2;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+  /* Large devices */
+}
+
+@media (max-width: 1199px) {
+  .process-box .box-number {
+    right: 100px;
+  }
+}
+
+.process-box .box-title {
+  font-weight: 500;
+  margin-bottom: 12px;
+}
+
+.process-box .box-img {
+  margin: 0 auto 30px auto;
+  max-width: 257px;
+  aspect-ratio: 16 / 16;
+}
+
+.process-box .box-icon {
+  position: relative;
+  height: 260px;
+  width: 260px;
+  text-align: center;
+  line-height: 260px;
+  background-color: var(--white-color);
+  border: 2px solid #F5F7FA;
+  border-radius: 50%;
+  z-index: 2;
+  margin-bottom: 20px;
+  /* Large devices */
+}
+
+@media (max-width: 1199px) {
+  .process-box .box-icon {
+    display: block;
+    margin: auto auto 20px auto;
+  }
+}
+
+.process-box .box-icon:before {
+  content: '';
+  background-color: #ECF1F5;
+  border-radius: 50%;
+  position: absolute;
+  inset: 30px;
+  z-index: -1;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+
+.process-box .box-icon .icon-shape {
+  position: absolute;
+  inset: 0;
+  border: 2px solid var(--theme-color);
+  border-radius: 50%;
+  -webkit-clip-path: circle(70% at 50% 0);
+          clip-path: circle(70% at 50% 0);
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+  -webkit-animation: spin 7s infinite;
+          animation: spin 7s infinite;
+  opacity: 0;
+  -webkit-transition: all 0.4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+}
+
+.process-box .box-text {
+  max-width: 260px;
+  margin-bottom: -0.2em;
+  /* Large devices */
+}
+
+@media (max-width: 1199px) {
+  .process-box .box-text {
+    display: block;
+    margin: auto;
+  }
+}
+
+.process-box:hover .box-icon:before {
+  background-color: var(--theme-color);
+}
+
+.process-box:hover .box-icon img {
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+}
+
+.process-box:hover .box-number {
+  background-color: var(--theme-color);
+}
+
+.process-box:hover .icon-shape {
+  opacity: 1;
+}
+
+.spin {
+  -webkit-animation: spin 10s linear infinite;
+  animation: spin 10s linear infinite;
+}
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0);
+    transform: rotate(0);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
