--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,14 @@ p {
   letter-spacing: 1px;
   color: #000;
 }
-.common-heading h4{
+/* .common-heading h4{
+
+} */
+.heading-title {
+	display: flex;
+	align-items: center;
+	white-space: nowrap;
+	justify-content:center;
   font-family: "Nunito Sans", sans-serif;
   font-size: 18px;
   text-transform: uppercase;
@@ -80,23 +87,26 @@ p {
   position: relative;
   font-weight: 800;
 }
-.common-heading h4::after{
-  position: absolute;
+.heading-title.title-center-line::before {
   content: "";
-  width: 4%;
-  height: 2px;
   background-color: #8a7bff;
-  right: 40%;
-  bottom: 11px;
+  height: 2px;
+  width: 3%;
+  margin-right: 12px;
 }
-.common-heading h4::before{
-  position: absolute;
+.heading-title.title-center-line::after {
   content: "";
-  width: 4%;
-  height: 2px;
   background-color: #8a7bff;
-  left: 40%;
-  bottom: 11px;
+  height: 2px;
+  width: 3%;
+  margin-left: 12px;
+}
+.heading-title.title-right-line::after {
+  content: "";
+  background-color: #8a7bff;
+  height: 2px;
+  width: 3%;
+  margin-left: 12px;
 }
 .start-header {
   opacity: 1;
@@ -309,7 +319,7 @@ p {
 .home-wrapper .home-main-slider .item .cover .header-content {
   position: absolute;
   overflow: hidden;
-  top: 50%;
+  top: 35%;
   transform: translate(0, -50%);
 }
 .home-wrapper .home-main-slider .item .cover .header-content h1 {
@@ -598,6 +608,7 @@ p {
 /*************************home about us css***************************/
 .about-us {
   width: 100%;
+  background-color: #efeef7;
 }
 .about-us .img-box1 {
   position: relative;
@@ -848,9 +859,9 @@ p {
 
 .box-title {
   font-size: 24px;
-  line-height: 1.417;
-  font-weight: 600;
-  margin-top: -0.32em;
+  line-height: 33px;
+  font-weight: 700;
+  margin-top: 10px;
 }
 
 .box-title a {
@@ -919,7 +930,7 @@ hr.title-line {
 }
 .about-desc{
   font-family: "Nunito Sans", sans-serif;
-    color: #788094;
+    color: #212529;
     line-height: 1.75;
   
 }
@@ -1140,9 +1151,10 @@ hr.title-line {
 /*******************product section css********************/
 .home-products{
   width: 100%;
-  background-image: url("../img/product-bg.png");
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
+  background: linear-gradient(rgb(46 35 132 / 22%), rgb(157 149 224 / 74%)), url(../img/product-bg.png);
 }
 /* .row-bg{
   background-image: url(https://websmirno.site/viktor/prolaundry/images/box02-img01.webp);
@@ -1844,6 +1856,8 @@ font-size: 14px;
 .home-testimonials .owl-carousel .owl-nav .owl-next{
   margin-left: 12px;
 }
+
+
 /**************************************easy washing tips css******************************************/
 .step-wrap {
   position: relative;
@@ -1856,8 +1870,7 @@ font-size: 14px;
   left: 13%;
   width: 898px;
   height: 3px;
-  background: -webkit-radial-gradient(50% 150.26%, 25413393.39% 152.99%, #8a7bff 0%, #ECF1F5 100%);
-  background: radial-gradient(25413393.39% 152.99% at 50% 150.26%, #8a7bff 0%, #ECF1F5 100%);
+  background: radial-gradient(25413393.39% 152.99% at 50% 150.26%, #ffffff 0%, #5744e7 100%);
   /* Large devices */
 }
 
@@ -1916,7 +1929,7 @@ font-size: 14px;
   background-color: #fff;
   width: 340px;
   height: 340px;
-  border: 8px solid #efeef7;
+  border: 8px solid #897bfe;
   border-radius: 50%;
   padding: 20px 32px;
   /* Extra small devices */
@@ -2006,7 +2019,7 @@ font-size: 14px;
 
 .process-card .box-icon:before, .process-card .box-icon:after {
   content: '';
-  background-color: #efeef7;
+  background-color: #897bfe;
   position: absolute;
   inset: 0px;
   border-radius: 20px;
@@ -2039,11 +2052,11 @@ font-size: 14px;
   transition: 0.4s ease-in-out;
 }
 .process-card.active .box-content {
-  border: 8px solid #8a7bff;
+  border: 8px solid #2f2483;
 }
 
 .process-card.active .box-icon:before {
-  background-color: #8a7bff;
+  background-color: #2f2483;
 }
 
 .process-card.active:before {
