--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,7 @@
   outline: none;
   box-sizing: border-box;
 }
-
-:root {
+:root{
   --wrapperheight:105px;
 }
 
@@ -60,7 +59,7 @@ p {
 }
 .hero-anime {
   width: 100%;
-  height: var(--wrapperheight);
+  height: 105px;
 }
 .common-heading{
   width: 100%;
@@ -72,9 +71,12 @@ p {
   letter-spacing: 1px;
   color: #000;
 }
-/* .common-heading h4{
-
-} */
+.desktop{
+  display: block!important;
+}
+.mobile{
+  display: none!important;
+}
 .heading-title {
 	display: flex;
 	align-items: center;
@@ -89,21 +91,21 @@ p {
 }
 .heading-title.title-center-line::before {
   content: "";
-  background-color: #8a7bff;
+  background-color: #2f5dd0;
   height: 2px;
   width: 3%;
   margin-right: 12px;
 }
 .heading-title.title-center-line::after {
   content: "";
-  background-color: #8a7bff;
+  background-color: #2f5dd0;
   height: 2px;
   width: 3%;
   margin-left: 12px;
 }
 .heading-title.title-right-line::after {
   content: "";
-  background-color: #8a7bff;
+  background-color: #2f5dd0;
   height: 2px;
   width: 3%;
   margin-left: 12px;
@@ -124,7 +126,7 @@ p {
   height: 85px;
 }
 .start-header.scroll-on .navbar-brand img {
-  width: 70%;
+  width: 80%;
   -webkit-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
 }
@@ -202,7 +204,7 @@ p {
   transform: rotate(45deg);
 }
 .navbar-toggler[aria-expanded=true] .navbar-toggler-icon:before {
-  transform: translateY(8px) rotate(-45deg);
+  transform: translateY(1px) rotate(-45deg);
 }
 
 .nav-link {
@@ -374,7 +376,7 @@ p {
   margin: 0;
   width: 60px;
   height: 60px;
-  background-color: #2c4db4;
+  background-color: #2f2483;
   border-radius: 50px;
   border: 1px solid #fff;
   transition: all 0.5s ease;
@@ -618,8 +620,8 @@ p {
   cursor: pointer;
 }
 .about-us .img-box1:hover .img2:after{
-  left: 8px;
-  top: 8px;
+  left: -5px;
+  top: -5px;
   transition: all 0.4s ease;
 }
 .about-us .img-box1 .img1 {
@@ -638,11 +640,11 @@ p {
 .about-us .img-box1 .img2:after {
   content: "";
   position: absolute;
-  left: -8px;
-  top: -8px;
+  left: 5px;
+  top: 5px;
   height: 210px;
   width: 210px;
-  background-color: #2c4db4;
+  background-color: #2f2483;
   border-radius: 50%;
   z-index: -1;
   -webkit-transition: 0.4s;
@@ -673,23 +675,23 @@ p {
   left: 0;
   z-index: 2;
   border-radius: 30px;
-  background: #2c4db4;
+  background: #2f2483;
   box-shadow: 0px 13px 25px 0px rgba(0, 0, 0, 0.05);
-  width: 182px;
+  width: 160px;
   color: var(--white-color);
   text-align: center;
-  padding: 30px;
+  padding: 20px;
 }
 .th-experience .experience-year {
-  font-size: 64px;
-  line-height: 64px;
+  font-size: 26px;
+  line-height: 35px;
   color: #fff;
   margin-bottom: 0px;
   font-family: "DM Sans", sans-serif;
 }
 .th-experience .experience-text {
-  font-size: 36px;
-  line-height: 36px;
+  font-size: 26px;
+  line-height: 15px;
   font-weight: 600;
   color: #fff;
   margin-bottom: 0;
@@ -858,9 +860,9 @@ p {
 }
 
 .box-title {
-  font-size: 24px;
-  line-height: 33px;
-  font-weight: 700;
+  font-size: 22px;
+  line-height: 31px;
+  font-weight: 900;
   margin-top: 10px;
 }
 
@@ -932,6 +934,7 @@ hr.title-line {
   font-family: "Nunito Sans", sans-serif;
     color: #212529;
     line-height: 1.75;
+    font-size: 17px;
   
 }
 .sec-btn,
@@ -1202,13 +1205,28 @@ hr.title-line {
 .product-content{
   position: absolute;
   width: 100%;
-  height: 11%;
   display: flex;
   justify-content: center;
   align-items: center;
   bottom: 0;
   transition: all 0.5s ease;
-  height: 13%;
+  height: 0;
+  flex-direction: column;
+  background-color: #352a86;
+  padding: 55px 0;
+}
+.product-content span{
+  color: #352a86;
+  font-size: 18px;
+  font-family: "Nunito Sans", sans-serif;
+  background: #efeef7;
+  padding: 5px 20px;
+  border-radius: 31px;
+  font-weight: 700;
+}
+.home-products-box:nth-last-child(1) .product-content{
+height: 100%;
+background-color: #2f248370;
 }
 .home-products-box:hover .product-content{
   background-color: #2f2483f5;
@@ -1223,7 +1241,8 @@ hr.title-line {
   font-family: "DM Sans", sans-serif;
   color: #fff;
   font-size: 30px;
-    font-weight: 500;
+  font-weight: 500;
+  margin-bottom: 10px;
 }
 /******************************footer css****************************/
 #tt-footer {
@@ -1232,29 +1251,10 @@ hr.title-line {
 }
 
 .footer-wrapper01 {
-  background-color: #000;
-  color: #ffffff;
+  background-color: #fff;
+  color: #000;
   position: relative;
 
-}
-
-@media (max-width: 1024.98px) {
-  .footer-wrapper01 {
-      padding:50px 0 47px
-  }
-}
-
-@media (max-width: 767.98px) {
-  .footer-wrapper01 {
-      padding:50px 0 40px
-  }
-}
-
-@media (min-width: 1230px) {
-  .footer-wrapper01>.container {
-      padding-left:0;
-      padding-right: 0
-  }
 }
 
 .f-holder {
@@ -1332,19 +1332,6 @@ hr.title-line {
   -webkit-transform: scaleX(-1);
   transform: scaleX(-1)
 }
-
-@media (max-width: 1024.98px) {
-  .f-logo {
-      font-size:21px;
-      padding: 0 0 5px 14px
-  }
-
-  .f-logo .tt-icon {
-      font-size: 18px;
-      top: 0
-  }
-}
-
 .f-logo:hover {
   color: #fff
 }
@@ -1352,9 +1339,9 @@ hr.title-line {
 .f-title {
   font-size: 19px;
   line-height: 1;
-  color: #fff;
+  color: #2f2483;
   font-family: "DM Sans", sans-serif;
-  font-weight: 600;
+  font-weight: 700;
   margin-bottom: 0;
   text-transform: uppercase;
 }
@@ -1370,6 +1357,7 @@ hr.title-line {
   margin-top: 25px;
   font-family: "Nunito Sans", sans-serif;
   margin-right: 40px;
+  font-size: 17px;
 }
 .f-info{
   font-family: "Nunito Sans", sans-serif;
@@ -1429,8 +1417,8 @@ hr.title-line {
   line-height: 13px;
   width: 40px;
   height: 40px;
-  color: #323232;
-  background-color: #fff;
+  color: #ffffff;
+  background-color: #2f2483;
   -webkit-transition: color .2s linear,background-color .2s linear;
   transition: color .2s linear,background-color .2s linear;
   border-radius: 50%
@@ -1456,7 +1444,7 @@ hr.title-line {
 .f-info li i{
   font-size: 20px;
   margin-right: 5px;
-  color: #8a7bff;
+  color: #2f2483;
 }
 .f-info li [class^=icons-] {
   position: absolute;
@@ -1467,13 +1455,15 @@ hr.title-line {
 }
 
 .f-info li a {
-  color: #fff;
+  color: #000;
   -webkit-transition: color .2s linear;
-  transition: color .2s linear
+  transition: color .2s linear;
+  font-size: 17px;
+  font-weight: 600;
 }
 
 .f-info li a:hover {
-  color: #8a7bff;
+  color: #2f2483;
 }
 
 @media (max-width: 1199.98px) {
@@ -1529,13 +1519,13 @@ hr.title-line {
   margin: auto;
   left: 0;
   right: 0;
-  background-color: #8a7bff;
+  background-color: #2f2483;
   -webkit-transition: width .2s linear;
   transition: width .2s linear
 }
 
 .f-link li a:hover {
-  color: #8a7bff;
+  color: #2f2483;
 }
 
 .f-link li a:hover:before {
@@ -1798,7 +1788,7 @@ hr.title-line {
   padding: 50px 20px 0 20px;
 }
 .testimonial-box p{
-  font-size: 16px;
+  font-size: 17px;
   font-family: "Nunito Sans", sans-serif;
   line-height: 30px;
   margin-right: 5%;
@@ -1817,14 +1807,14 @@ padding: 30px 10px;
 .quote {
   position: absolute;
   top: -15px;
-  color: #322785;
+  color: #352a86;
   font-size: 40px;
 }
 .name {
-  font-size: 18px !important;
+  font-size: 20px !important;
   font-family: "DM Sans", sans-serif !important;
   font-weight: 700;
-  color: #2d2299;
+  color: #352a86;
   /* text-transform: uppercase; */
 }
 .position {
@@ -1835,14 +1825,14 @@ font-size: 14px;
   text-align: center;
 }
 .home-testimonials .owl-carousel .owl-nav .owl-prev,.home-testimonials .owl-carousel .owl-nav .owl-next{
-  background-color:#8a7bff;
+  background-color:#2f2483;
   border-radius: 50px;
   color: #fff;
   width: 55px;
   height: 55px;
   font-size: 22px;
   transition: all 0.5s ease;
-  border: 1px solid #8a7bff;
+  border: 1px solid #2f2483;
 }
 .home-testimonials .owl-carousel .owl-nav .owl-prev,.home-testimonials .owl-carousel .owl-nav .owl-next:focus{
   outline: none;
@@ -1859,9 +1849,12 @@ font-size: 14px;
 
 
 /**************************************easy washing tips css******************************************/
+.coming-soon-cta{
+  background-color: #efeef7;
+}
 .step-wrap {
   position: relative;
-  margin: 125px 0;
+  /* margin: 125px 0; */
 }
 
 .step-wrap .process-line {
@@ -1888,23 +1881,6 @@ font-size: 14px;
   cursor: pointer;
 }
 
-.process-card:before {
-  content: "";
-  position: absolute;
-  top: -20%;
-  left: -25%;
-  width: 568px;
-  height: 568px;
-  background: url("../img/process_shape_1.png");
-  opacity: 0;
-  visibility: hidden;
-  -webkit-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
-  -webkit-animation: spin 15s linear infinite;
-          animation: spin 15s linear infinite;
-  /* Small devices */
-  /* Extra small devices */
-}
 
 @media (max-width: 767px) {
   .process-card:before {
@@ -1929,61 +1905,36 @@ font-size: 14px;
   background-color: #fff;
   width: 340px;
   height: 340px;
-  border: 8px solid #897bfe;
+  border: 5px solid #7a6fd6;
   border-radius: 50%;
   padding: 20px 32px;
-  /* Extra small devices */
-  /* Small devices */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.process-card.active .box-content .box-icon{
+background-color: #352a86;
 }
 
-@media (max-width: 575px) {
-  .process-card .box-content {
-    width: 300px;
-    height: 300px;
-    padding: 20px 26px;
-  }
-}
-
-@media (max-width: 767px) {
-  .process-card .box-content {
-    display: block;
-    margin: auto;
-  }
-}
-
-.process-card .box-content:before {
-  content: "";
-  position: absolute;
-  inset: 0;
-}
-
-.process-card .box-top {
-  padding: 90px 0 0 0;
-  /* Extra small devices */
-}
-
-@media (max-width: 575px) {
-  .process-card .box-top {
-    padding: 70px 0 0 0;
-  }
-}
 
 .process-card .box-number {
   text-transform: uppercase;
-  font-size: 16px;
+  font-size: 18px;
   margin-bottom: 8px;
   margin-top: -0.45em;
   font-family: "Nunito Sans", sans-serif;
-  color: #352a86;
+  color: #2f5dd0;
   font-weight: 700;
 }
 .process-card .box-text {
-
+  font-size: 17px;
   font-family: "Nunito Sans", sans-serif;
 }
 .process-card .box-title {
   margin-bottom: 12px;
   font-family: "DM Sans", sans-serif;
+  text-transform: uppercase;
 }
 
 @media (max-width: 575px) {
@@ -1994,53 +1945,23 @@ font-size: 14px;
 
 .process-card .box-icon {
   position: absolute;
-  top: 0;
-  left: calc(50% - 105px);
-  height: 128px;
-  width: 148px;
-  line-height: 128px;
-  border-radius: 20px;
-  z-index: 2;
-  /* Large devices */
-  /* Medium devices */
+  top: -15%;
+  left: 50%;
+  background-color: #7a6fd6;
+  padding: 10px;
+  width: 85px;
+  height: 85px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50px;
+  transform: translate(-50%, 0);
 }
 
-@media (max-width: 1199px) {
-  .process-card .box-icon {
-    left: calc(50% - 120px);
-  }
-}
 
-@media (max-width: 991px) {
-  .process-card .box-icon {
-    left: calc(50% - 70px);
-  }
-}
-
-.process-card .box-icon:before, .process-card .box-icon:after {
-  content: '';
-  background-color: #897bfe;
-  position: absolute;
-  inset: 0px;
-  border-radius: 20px;
-  z-index: -1;
-}
-
-.process-card .box-icon:before {
-  -webkit-clip-path: path("M44.6853 100.05L5.34957 32.0101C-2.35877 18.6767 7.26309 2 22.6643 2H101.336C116.737 2 126.359 18.6767 118.65 32.0101L79.3147 100.05C71.6141 113.37 52.3859 113.37 44.6853 100.05Z");
-          clip-path: path("M44.6853 100.05L5.34957 32.0101C-2.35877 18.6767 7.26309 2 22.6643 2H101.336C116.737 2 126.359 18.6767 118.65 32.0101L79.3147 100.05C71.6141 113.37 52.3859 113.37 44.6853 100.05Z");
-}
-
-.process-card .box-icon:after {
-  inset: 4px;
-  border-radius: 20px;
-  background-color: #fff;
-  -webkit-clip-path: path("M37.6619 81.8468L5.23242 23.9694C-2.43423 0.6361 6.19022 2 16.5705 1H91.4295C106.81 2 116.434 7.6361 113.768 22.9694L74.3381 90.8467C66.648 114.221 41.352 96.221 36.6619 76.8468Z");
-          clip-path: path("M37.6619 81.8468L5.23242 23.9694C-2.43423 0.6361 6.19022 2 16.5705 1H91.4295C106.81 2 116.434 7.6361 113.768 22.9694L74.3381 90.8467C66.648 114.221 41.352 96.221 36.6619 76.8468Z");
-}
 
 .process-card .box-icon img {
-  margin: -40px 0 0 -20px;
+  width:85%;
 }
 
 .process-card:hover .box-icon img {
@@ -2052,23 +1973,17 @@ font-size: 14px;
   transition: 0.4s ease-in-out;
 }
 .process-card.active .box-content {
-  border: 8px solid #2f2483;
+  border: 6px solid #2f2483;
+
 }
 
 .process-card.active .box-icon:before {
   background-color: #2f2483;
 }
 
-.process-card.active:before {
+.process-card.active .box-content:before {
   opacity: 1;
   visibility: visible;
-}
-
-/* Large devices */
-@media (max-width: 1199px) {
-  .process-card .box-content {
-    padding: 16px 24px;
-  }
 }
 
 /* Small devices */
